--- a/public/messagetwo.css
+++ b/public/messagetwo.css
@@ -35,7 +35,7 @@ html,body{
   color: #000;
 }
 .nav .links .mainlink{
- color: #1d3557;
+ color: #2f8be0;
 }
 .nav h4{
   font-size: 22px;
@@ -63,10 +63,10 @@ html,body{
   color: #000;
 }
 .btn-box a:hover{
-  color: #1d3557;
+  color: #2f8be0;
 }
 .btn-box .mainlinks{
-  color: #1d3557;
+  color: #2f8be0;
 }
 .content-right img{
   width: 350px;
