--- a/public/settingtwo.css
+++ b/public/settingtwo.css
@@ -63,10 +63,10 @@ html,body{
   color: #000;
 }
 .btn-box a:hover{
-  color: #1d3557;
+  color: #2f8be0;
 }
 .btn-box .mainlinks{
-  color: #1d3557;
+  color: #2f8be0;
 }
 .content-right img{
   width: 350px;
